# server/api/routes/users.js
@@ -59,28 +59,78 @@ router.post('/profile', jwt({secret: jwtSecret, algorithms: ['HS256'], credentia
 	}
 });
 
-router.get('/profile', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
-	const user = await User.findOne({'_id': req.auth}).exec();
-	if (user == null) {
-		res.status(404).send();
-	} else {
-		res.status(200).send(user);
+router.post('/changepassword/admin', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
+	try {
+		const user = await User.findOne({'_id': req.auth}).where('isadmin').equals(true).exec();
+		if(user==null){ 
+			res.status(404).send({success: false, description: 'Non sei un admin'});
+			return;
+		}
+		if (user.password == req?.body?.oldpassword) {
+			await User.updateOne(
+				{'_id': req.auth},
+				{$set: {
+					'password': req.body.newpassword
+				}}
+			);
+			res.status(200).send({success: true});
+		} else {
+			res.status(403).send({success: false, description: 'Incorrect old password'});
+		}
+	} catch (err) {
+		res.status(400).send({success: false, description: err.message});
 	}
 });
 
-router.post('/signin', async (req, res) => {
+
+router.get('/profile/admin', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
+	const user = await User.findOne({'_id': req.auth}).where('isadmin').equals(true).exec();
+	if (user == null) {
+		res.status(404).send({success: false, description: 'Non sei un admin'});
+	} else {
+		res.status(200).send({success: true, user});
+	}
+});
+
+router.post('/profile/admin', jwt({secret: jwtSecret, algorithms: ['HS256'], credentialsRequired: true},), async (req, res) => {
+	try {
+		await User.updateOne(
+			{'_id': req.auth},
+			{$set: {
+				'name': req.body.name,
+				'surname': req.body.surname,
+				'email': req.body.email,
+				'address': req.body.address,
+				'city': req.body.city
+			}}
+		).where('isadmin').equals(true);
+		res.status(200).send({success: true});
+	} catch (err) {
+		res.status(400).send({success: false, description: err.message});
+	}
+});
+
+
+
+const signin = async (req, res) => {
 	const user = await User.findOne({'email': req.body.email}).exec();
 	if (user == null) {
+		console.log("user not found");
 		res.status(404).send();
 	} else {
 		if (user.password == req.body.password) {
 			const token = jsonwebtoken.sign(user._id.toString(), jwtSecret);
 			res.status(201).send(JSON.stringify({'id': user._id, 'token': token}));
 		} else {
+			console.log("pasword not found");
 			res.status(404).send();
 		}
 	}
-});
+}
+
+router.post('/signin', signin);
+
+router.post('/signin/admin', signin);
 
 router.post('/signup', async (req, res) => {
 	try {
